# SC4052-A2

./: README.md
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
crawler/: README.md
graphrag/: .gitignore  Cargo.toml  Dockerfile  README.md  test.http
graphrag/frontend/: index.html  index.js  package.json  pnpm-lock.yaml  styles.css  webpack.config.js
graphrag/src/: gemini.rs  handlers.rs  main.rs  models.rs  prompts.rs  utils.rs
infra/: .envrc  .gitignore  a.json  cdktf.json  main.ts  package-lock.json  package.json  setup.js
infra/__tests__/: main-test.ts
infra/scripts/: cloud-init-1.sh  cloud-init.sh
report/: Makefile  main.typ  refs.bib  vars.typ
